view working, add command working, work on rem and run commands next